--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="400dp"
-        android:text="Start counting" />
+        android:text="@string/start_counting" />
 
     <TextView
         android:id="@+id/tv_time_total"
@@ -39,15 +39,6 @@
         android:textSize="26sp"
         android:textColor="@android:color/holo_red_light"
         android:background="@android:color/black"/>
-
-    <TextView
-        android:id="@+id/tv_file_contents"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        android:layout_marginTop="300dp"
-        android:layout_marginBottom="200dp"
-        />
 
 
 </RelativeLayout>
