--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -5,8 +5,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/map_action"
-        android:title="@string/location"
+        android:id="@+id/details_action"
+        android:title="@string/progress_details"
+        app:showAsAction="ifRoom"/>
+
+    <item
+        android:id="@+id/reset_action"
+        android:title="@string/reset_total_time"
         app:showAsAction="never"/>
     <item
         android:id="@+id/browser_action"
